[gd_scene load_steps=14 format=3 uid="uid://dv8s2qrafyv6h"]

[ext_resource type="Script" uid="uid://digm0csc7kca" path="res://count_down.gd" id="1_0rk1c"]
[ext_resource type="PackedScene" uid="uid://doa52rlvrecwq" path="res://missile.tscn" id="2_v75oo"]
[ext_resource type="Script" uid="uid://cnwgfyi04td56" path="res://missile_manager.gd" id="3_h6tfv"]
[ext_resource type="Texture2D" uid="uid://cwj6earfewrqk" path="res://Assets/Airplane/Airplane1.png" id="4_81v5j"]
[ext_resource type="Script" uid="uid://dx3glqxunit1e" path="res://airplane.gd" id="4_ue0mx"]
[ext_resource type="Texture2D" uid="uid://bqud7aajhibu4" path="res://Assets/Airplane/Airplane2.png" id="5_ue0mx"]
[ext_resource type="Texture2D" uid="uid://bfmnxdldw8yao" path="res://Assets/Airplane/Airplane3.png" id="6_hqalv"]
[ext_resource type="Texture2D" uid="uid://bbe206toopwom" path="res://Assets/Airplane/Airplane4.png" id="7_q8af2"]
[ext_resource type="Texture2D" uid="uid://dprjqhbei1fwy" path="res://Assets/Airplane/Airplane5.png" id="8_fic4s"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v75oo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_81v5j")
}],
"loop": true,
"name": &"Airplane",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ue0mx")
}],
"loop": true,
"name": &"stage_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hqalv")
}],
"loop": true,
"name": &"stage_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_q8af2")
}],
"loop": true,
"name": &"stage_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_fic4s")
}],
"loop": true,
"name": &"stage_4",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h6tfv"]
radius = 18.0
height = 126.0

[sub_resource type="Curve" id="Curve_ue0mx"]
_data = [Vector2(0.06647399, 1), 0.0, 0.0, 0, 0, Vector2(0.63583815, 0.8495815), 0.0, 0.0, 0, 0, Vector2(1, 0.08148694), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_hqalv"]
colors = PackedColorArray(0.9764706, 0.7137255, 0.30588236, 1, 0.79607844, 0.20784314, 0.23921569, 1)

[node name="CountDown" type="CanvasLayer"]
script = ExtResource("1_0rk1c")

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 5.0
one_shot = true
autostart = true

[node name="Pause" type="Button" parent="."]
offset_left = 635.0
offset_top = 406.0
offset_right = 747.0
offset_bottom = 464.0
theme_override_font_sizes/font_size = 36
text = "Pause"

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -33.5
offset_right = 20.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "5"

[node name="Timer1" type="Label" parent="."]
offset_left = 22.0
offset_top = 514.0
offset_right = 62.0
offset_bottom = 564.0
theme_override_font_sizes/font_size = 36

[node name="Timer2" type="Label" parent="."]
offset_left = 124.0
offset_top = 515.0
offset_right = 164.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 36

[node name="Timer3" type="Label" parent="."]
offset_left = 219.0
offset_top = 515.0
offset_right = 280.0
offset_bottom = 565.0
theme_override_font_sizes/font_size = 36

[node name="Timer4" type="Label" parent="."]
offset_left = 284.0
offset_top = 518.0
offset_right = 320.0
offset_bottom = 568.0
theme_override_font_sizes/font_size = 36

[node name="Missile" parent="." instance=ExtResource("2_v75oo")]
position = Vector2(-582, 229)

[node name="MissileManager" type="Node2D" parent="."]
script = ExtResource("3_h6tfv")
missile_scene = ExtResource("2_v75oo")

[node name="Airplane" type="CharacterBody2D" parent="."]
texture_filter = 1
position = Vector2(994, 98)
script = ExtResource("4_ue0mx")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Airplane"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_v75oo")
animation = &"Airplane"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Airplane"]
position = Vector2(-9, -11)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_h6tfv")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Airplane"]
emitting = false
amount = 60
one_shot = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 5.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ue0mx")
color_ramp = SubResource("Gradient_hqalv")

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
